@@ -52,8 +52,11 @@ def new_storage (opts)
 
   opts ||= {}
 
+  #Ruote::Couch::CouchStorage.new(
+  #  _couch_url,
+  #  opts.merge!('couch_prefix' => 'test', :basic_auth => %w[ admin admin ]))
   Ruote::Couch::CouchStorage.new(
     _couch_url,
-    opts.merge!('couch_prefix' => 'test', :basic_auth => %w[ admin admin ]))
+    opts.merge!('couch_prefix' => 'test'))
 end
 
